# viral

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
viral/: __init__.py  base.py  get_viral_data.py
