[metadata]
name = viral
version = 0.0.3
url = https://github.com/thorwhalen/viral
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Acquiring and analyzing covid-19 (coronavirus) statistics data
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = viral

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	py2store
	pandas
	kaggle

